Improve memory management
This commit introduces a smarter flushing to disk strategy.
Before this change, files were unconditionally written to disk, even
if large amounts of memory were free. With this change, flushing
to disk happens when memory needs to be reclaimed. In addition,
auto-flushing of older entries happens, which proves useful for
longer processes.

This should make both processing faster and also reduce the
memory usage.