@@ -15,12 +15,19 @@
  */
 package me.champeau.a4j.jsolex.processing.util;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.io.BufferedInputStream;
+import java.io.BufferedOutputStream;
+import java.io.DataInputStream;
+import java.io.DataOutputStream;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.RandomAccessFile;
 import java.lang.ref.Cleaner;
-import java.lang.ref.WeakReference;
-import java.nio.MappedByteBuffer;
-import java.nio.channels.FileChannel;
+import java.lang.ref.ReferenceQueue;
+import java.lang.ref.SoftReference;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -29,11 +36,10 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.WeakHashMap;
-import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.Executors;
-import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
@@ -43,6 +49,7 @@ import java.util.concurrent.locks.ReentrantLock;
  * memory.
  */
 public final class FileBackedImage implements ImageWrapper {
+    private static final Logger LOGGER = LoggerFactory.getLogger(FileBackedImage.class);
     private static final Cleaner CLEANER = Cleaner.create();
     private static final Map<Path, Integer> REF_COUNT = new HashMap<>();
     private static final Map<Path, Status> STATUS = new ConcurrentHashMap<>();
@@ -51,25 +58,57 @@ public final class FileBackedImage implements ImageWrapper {
     private static final Lock CACHE_LOCK = new ReentrantLock();
     private static final byte MONO = 0;
     private static final byte RGB = 2;
-    private static final BlockingQueue<Runnable> WRITE_OPS = new LinkedBlockingQueue<>(Math.max(1, Runtime.getRuntime().availableProcessors() / 2));
+    private static final int AUTOFLUSH_TIMEOUT = 10_000;
+    private static final int DEFAULT_RW_BUFFER_SIZE = 65536;
+    private static final ReferenceQueue<ImageWrapper> REFERENCE_QUEUE = new ReferenceQueue<>();
+
 
     static {
-        var executor = Executors.newFixedThreadPool(Math.max(1, Runtime.getRuntime().availableProcessors() / 2));
-        Thread.startVirtualThread(() -> {
-            try {
-                while (!Thread.currentThread().isInterrupted()) {
-                    try {
-                        var runnable = WRITE_OPS.take();
-                        executor.submit(runnable);
-                    } catch (InterruptedException e) {
-                        Thread.currentThread().interrupt();
-                        break;
-                    }
+        var flushing = new Thread(() -> {
+            while (true) {
+                try {
+                    var ref = (ImageReference) REFERENCE_QUEUE.remove();
+                    ref.flushToDisk();
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    break;
                 }
-            } finally {
-                executor.shutdownNow();
             }
         });
+        flushing.setName("FileBackedImage-Flush");
+        flushing.setDaemon(true);
+        flushing.start();
+
+        var autoFlush = new Thread(() -> {
+            while (true) {
+                try {
+                    Thread.sleep(AUTOFLUSH_TIMEOUT);
+                    long now = System.currentTimeMillis();
+                    CACHE_LOCK.lock();
+                    try {
+                        var toFlush = WRAP_CACHE.values()
+                                .stream()
+                                .filter(fbi -> fbi.unwrapped.get() != null)
+                                .filter(fbi -> now - fbi.lastAccessTime.get() > AUTOFLUSH_TIMEOUT)
+                                .toList();
+                        if (!toFlush.isEmpty()) {
+                            LOGGER.debug("Auto-flushing {} images", toFlush.size());
+                            for (var fbi : toFlush) {
+                                fbi.flushToDisk(fbi.unwrapped.source);
+                            }
+                        }
+                    } finally {
+                        CACHE_LOCK.unlock();
+                    }
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    break;
+                }
+            }
+        });
+        autoFlush.setDaemon(true);
+        autoFlush.setName("FileBackedImage-AutoFlush");
+        autoFlush.start();
     }
 
     private final Status status;
@@ -79,7 +118,8 @@ public final class FileBackedImage implements ImageWrapper {
     private final Path backingFile;
     private final Map<Class<?>, Object> metadata;
     private final Object keptInMemory;
-    private final WeakReference<ImageWrapper> unwrapped;
+    private ImageReference unwrapped;
+    private final AtomicLong lastAccessTime;
 
     private FileBackedImage(int width, int height, Path backingFile, Map<Class<?>, Object> metadata, Object keptInMemory, ImageWrapper source) {
         if (source instanceof FileBackedImage) {
@@ -90,9 +130,10 @@ public final class FileBackedImage implements ImageWrapper {
         this.backingFile = backingFile;
         this.metadata = metadata;
         this.keptInMemory = keptInMemory;
-        this.unwrapped = new WeakReference<>(source);
+        this.unwrapped = new ImageReference(source, this, REFERENCE_QUEUE);
         this.status = STATUS.computeIfAbsent(backingFile, k -> new Status(new AtomicBoolean(false), new ReentrantLock(), new ArrayList<>()));
         this.condition = status.newCondition();
+        this.lastAccessTime = new AtomicLong(System.currentTimeMillis());
         LOCK.lock();
         try {
             REF_COUNT.compute(backingFile, (k, v) -> v == null ? 1 : v + 1);
@@ -100,6 +141,9 @@ public final class FileBackedImage implements ImageWrapper {
             LOCK.unlock();
         }
         CLEANER.register(this, () -> clean(backingFile));
+        if (Runtime.getRuntime().freeMemory() < 0.1 * Runtime.getRuntime().totalMemory()) {
+            flushToDisk(source);
+        }
     }
 
     public static FileBackedImage wrap(ImageWrapper wrapper) {
@@ -107,6 +151,10 @@ public final class FileBackedImage implements ImageWrapper {
             return fbi;
         }
         CACHE_LOCK.lock();
+        // if memory is too close to full, flush some images to disk
+        if (Runtime.getRuntime().freeMemory() < 0.1 * Runtime.getRuntime().totalMemory()) {
+            flushImages();
+        }
         try {
             var cached = WRAP_CACHE.get(wrapper);
             if (cached != null) {
@@ -116,99 +164,174 @@ public final class FileBackedImage implements ImageWrapper {
             var height = wrapper.height();
             try {
                 var backingFile = TemporaryFolder.newTempFile("jsolex", ".img");
+                Files.delete(backingFile);
                 if (wrapper instanceof ImageWrapper32 mono) {
                     var result = new FileBackedImage(width, height, backingFile, mono.metadata(), null, mono);
-                    WRITE_OPS.put(() -> {
-                        var data = mono.data();
-                        var length = mono.width() * mono.height();
-                        MappedByteBuffer byteBuffer = null;
-                        try (var raf = new RandomAccessFile(backingFile.toFile(), "rw"); var channel = raf.getChannel()) {
-                            byteBuffer = channel.map(FileChannel.MapMode.READ_WRITE, 0, 1 + 4 + 4 + 4L * length);
-                            byteBuffer.put(MONO);
-                            byteBuffer.putInt(height);
-                            byteBuffer.putInt(width);
-                            var floatBuffer = byteBuffer.asFloatBuffer();
-                            for (int y = 0; y < height; y++) {
-                                floatBuffer.put(data[y]);
-                            }
-                        } catch (IOException e) {
-                            throw new RuntimeException(e);
-                        } finally {
-                            result.fileSaved();
-                        }
-                    });
                     WRAP_CACHE.put(wrapper, result);
                     return result;
                 }
                 if (wrapper instanceof RGBImage rgb) {
                     var fileBackedImage = new FileBackedImage(width, height, backingFile, rgb.metadata(), null, rgb);
-                    WRITE_OPS.put(() -> {
-                        var r = rgb.r();
-                        var g = rgb.g();
-                        var b = rgb.b();
-                        var length = rgb.width() * rgb.height();
-                        try (var raf = new RandomAccessFile(backingFile.toFile(), "rw"); var channel = raf.getChannel()) {
-                            var byteBuffer = channel.map(FileChannel.MapMode.READ_WRITE, 0, 1 + 4 + 4 + 3 * 4L * length);
-                            byteBuffer.put(RGB);
-                            byteBuffer.putInt(rgb.height());
-                            byteBuffer.putInt(rgb.width());
-                            var floatBuffer = byteBuffer.asFloatBuffer();
-                            for (int y = 0; y < height; y++) {
-                                floatBuffer.put(r[y]);
-                                floatBuffer.put(g[y]);
-                                floatBuffer.put(b[y]);
-                            }
-                        } catch (IOException e) {
-                            throw new RuntimeException(e);
-                        } finally {
-                            fileBackedImage.fileSaved();
-                        }
-                    });
                     WRAP_CACHE.put(wrapper, fileBackedImage);
                     return fileBackedImage;
                 }
                 throw new ProcessingException("Unexpected image type " + wrapper);
             } catch (IOException ex) {
                 throw new ProcessingException(ex);
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-                throw new ProcessingException(e);
             }
         } finally {
             CACHE_LOCK.unlock();
         }
     }
 
+    public static void flushImages() {
+        CACHE_LOCK.lock();
+        try {
+            System.gc();
+            if (Runtime.getRuntime().freeMemory() < 0.25 * Runtime.getRuntime().totalMemory()) {
+                // This helps with machines which have very low memory available
+                Thread.sleep(1_000);
+            }
+            var fbiToFlush = WRAP_CACHE.values()
+                    .stream()
+                    .filter(fbi -> fbi.unwrapped.get() != null)
+                    .toList();
+            if (fbiToFlush.isEmpty()) {
+                return;
+            }
+            LOGGER.debug("Flushing {} images to disk to free memory", fbiToFlush.size());
+            try (var executor = Executors.newFixedThreadPool(Math.max(1, Runtime.getRuntime().availableProcessors() / 2))) {
+                for (var fbi : fbiToFlush) {
+                    executor.submit(() -> {
+                        if (Runtime.getRuntime().freeMemory() > 0.5 * Runtime.getRuntime().totalMemory()) {
+                            return;
+                        }
+                        var status = fbi.status;
+                        var condition = status.newCondition();
+                        fbi.flushToDisk(fbi.unwrapped.source);
+                        status.lock().lock();
+                        try {
+                            while (!status.saved().get()) {
+                                try {
+                                    condition.await();
+                                } catch (InterruptedException e) {
+                                    Thread.currentThread().interrupt();
+                                    break;
+                                }
+                            }
+                        } finally {
+                            status.lock().unlock();
+                        }
+                        System.gc();
+                    });
+                }
+            }
+            LOGGER.debug("Flushed images");
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        } finally {
+            CACHE_LOCK.unlock();
+        }
+    }
+
+    private void flushToDisk(ImageWrapper source) {
+        if (source == null) {
+            return;
+        }
+        Thread.startVirtualThread(() -> {
+            status.lock().lock();
+            try {
+                if (status.saved.get() || REF_COUNT.getOrDefault(backingFile, 0) == 0) {
+                    return;
+                }
+                if (source instanceof ImageWrapper32 mono) {
+                    try (var fos = new BufferedOutputStream(new FileOutputStream(backingFile.toFile()), DEFAULT_RW_BUFFER_SIZE);
+                         var dos = new DataOutputStream(fos)) {
+                        dos.writeByte(MONO);
+                        dos.writeInt(height);
+                        dos.writeInt(width);
+                        var data = mono.data();
+                        for (int y = 0; y < height; y++) {
+                            for (int x = 0; x < width; x++) {
+                                dos.writeFloat(data[y][x]);
+                            }
+                        }
+                    } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
+                } else if (source instanceof RGBImage rgb) {
+                    try (var fos = new BufferedOutputStream(new FileOutputStream(backingFile.toFile()), DEFAULT_RW_BUFFER_SIZE);
+                         var dos = new DataOutputStream(fos)) {
+                        dos.writeByte(RGB);
+                        dos.writeInt(height);
+                        dos.writeInt(width);
+                        var r = rgb.r();
+                        var g = rgb.g();
+                        var b = rgb.b();
+                        for (int y = 0; y < height; y++) {
+                            for (int x = 0; x < width; x++) {
+                                dos.writeFloat(r[y][x]);
+                                dos.writeFloat(g[y][x]);
+                                dos.writeFloat(b[y][x]);
+                            }
+                        }
+                    } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
+                }
+            } finally {
+                fileSaved();
+                status.lock().unlock();
+            }
+        });
+    }
+
     public ImageWrapper unwrapToMemory() {
+        lastAccessTime.set(System.currentTimeMillis());
         var cached = unwrapped.get();
         if (cached != null) {
             return cached;
         }
-        while (!status.saved().get()) {
-            try {
-                status.lock().lock();
-                condition.await();
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-                break;
-            } finally {
-                status.lock().unlock();
+        LOGGER.debug("Re-reading image from disk: {}", backingFile);
+        status.lock().lock();
+        try {
+            while (!status.saved().get()) {
+                try {
+                    condition.await();
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    break;
+                }
             }
+        } finally {
+            status.lock().unlock();
         }
         // Now that the file is saved, proceed to re-read the image from disk.
-        try (var raf = new RandomAccessFile(backingFile.toFile(), "r")) {
-            var channel = raf.getChannel();
-            var byteBuffer = channel.map(FileChannel.MapMode.READ_ONLY, 0, channel.size());
-            int kind = byteBuffer.get();
-            int height = byteBuffer.getInt();
-            int width = byteBuffer.getInt();
+        var read = readFromDisk();
+        unwrapped = new ImageReference(read, this, REFERENCE_QUEUE);
+        CACHE_LOCK.lock();
+        try {
+            WRAP_CACHE.put(read, new FileBackedImage(width, height, backingFile, metadata, keptInMemory, read));
+        } finally {
+            CACHE_LOCK.unlock();
+        }
+        LOGGER.debug("Unwrapped image from disk: {}", backingFile);
+        return read;
+    }
+
+    private ImageWrapper readFromDisk() {
+        try (var fis = new BufferedInputStream(new FileInputStream(backingFile.toFile()), DEFAULT_RW_BUFFER_SIZE);
+             var dis = new DataInputStream(fis)) {
+            int kind = dis.readByte();
+            int height = dis.readInt();
+            int width = dis.readInt();
             return switch (kind) {
                 case MONO -> {
                     float[][] data = new float[height][width];
-                    var floatBuffer = byteBuffer.asFloatBuffer();
                     for (int y = 0; y < height; y++) {
-                        data[y] = new float[width];
-                        floatBuffer.get(data[y]);
+                        for (int x = 0; x < width; x++) {
+                            data[y][x] = dis.readFloat();
+                        }
                     }
                     yield new ImageWrapper32(width, height, data, metadata);
                 }
@@ -216,14 +339,12 @@ public final class FileBackedImage implements ImageWrapper {
                     float[][] r = new float[height][width];
                     float[][] g = new float[height][width];
                     float[][] b = new float[height][width];
-                    var floatBuffer = byteBuffer.asFloatBuffer();
                     for (int y = 0; y < height; y++) {
-                        r[y] = new float[width];
-                        g[y] = new float[width];
-                        b[y] = new float[width];
-                        floatBuffer.get(r[y]);
-                        floatBuffer.get(g[y]);
-                        floatBuffer.get(b[y]);
+                        for (int x = 0; x < width; x++) {
+                            r[y][x] = dis.readFloat();
+                            g[y][x] = dis.readFloat();
+                            b[y][x] = dis.readFloat();
+                        }
                     }
                     yield new RGBImage(width, height, r, g, b, metadata);
                 }
@@ -257,6 +378,8 @@ public final class FileBackedImage implements ImageWrapper {
 
     private void fileSaved() {
         status.fileSaved();
+        unwrapped.source = null;
+        unwrapped.clear();
     }
 
 
@@ -270,7 +393,7 @@ public final class FileBackedImage implements ImageWrapper {
                 return v - 1;
             });
             if (refCount == 0) {
-                Files.delete(backingFile);
+                Files.deleteIfExists(backingFile);
                 REF_COUNT.remove(backingFile);
                 STATUS.remove(backingFile);
             }
@@ -308,6 +431,28 @@ public final class FileBackedImage implements ImageWrapper {
             } finally {
                 lock.unlock();
             }
+        }
+    }
+
+    private static class ImageReference extends SoftReference<ImageWrapper> {
+        private final FileBackedImage image;
+        private ImageWrapper source;
+
+        public ImageReference(ImageWrapper referent, FileBackedImage image, ReferenceQueue<ImageWrapper> queue) {
+            super(referent, queue);
+            this.image = image;
+            this.source = switch (referent) {
+                case ImageWrapper32 mono ->
+                        new ImageWrapper32(mono.width(), mono.height(), mono.data(), mono.metadata());
+                case RGBImage rgb -> new RGBImage(rgb.width(), rgb.height(), rgb.r(), rgb.g(), rgb.b(), rgb.metadata());
+                default -> throw new IllegalArgumentException("Unexpected image type " + referent);
+            };
+        }
+
+        public void flushToDisk() {
+            var source = this.source;
+            this.source = null;
+            image.flushToDisk(source);
         }
     }
 }
